v1.3.2 - Fix Layout Z-Index, Initial State, Animation Flow & Camera

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,23 @@ html {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes scan {
+    0% {
+        top: 0%;
+        opacity: 0;
+    }
+
+    10% {
+        opacity: 1;
+    }
+
+    90% {
+        opacity: 1;
+    }
+
+    100% {
+        top: 100%;
+        opacity: 0;
+    }
+}
